将WS重连改为使用虚拟线程